# pfd-parallel

./: .gitmodules  CMakeLists.txt  README.md  Readme2.md
example_data/: CMakeLists.txt
example_data/ssi/: xb_deg5_1_1.ssi  xb_deg5_1_10.ssi  xb_deg5_1_2.ssi  xb_deg5_1_3.ssi  xb_deg5_1_4.ssi  xb_deg5_1_5.ssi  xb_deg5_1_6.ssi  xb_deg5_1_7.ssi  xb_deg5_1_8.ssi  xb_deg5_1_9.ssi
interface/: CMakeLists.txt  implementation.cpp  pnet_logging.cpp  pnet_logging.hpp  singular_functions.cpp  singular_functions.hpp  singular_pnet-interface.cpp  singular_pnet-interface.hpp  type_aliases.hpp
interface/cmake/modules/: FindSingular.cmake
parallel/: CMakeLists.txt  implementation.cpp  implementation.hpp.in  singular_functions.cpp
parallel/LIB/: parallelgspc.lib
python/: math_parser.py  parse_mathematica.py  test_math_parser.py
script_templates/: Singular_script_template.sing  script_template.sh  script_template_monitor.sh
share/include/: interface.hpp
singular/: CMakeLists.txt  companion.lib  companion_gspc_interface.lib.in  parallelgspc.lib  pfd.lib  pfd_gspc.lib.in  pfd_gspc_interface.lib.in  pfd_merge.lib  pfd_singular_interface.lib.in
spack/: repo.yaml
src/: config.hpp.in  installation.cpp  installation.hpp.in
src/cmake/modules/: FindSingular.cmake
workflow/: .parallel_rgraph_all.xpnet.swp  .parallel_tree_all.xpnet.swp  CMakeLists.txt  parallel_all.xpnet  parallel_allpfd.xpnet  parallel_first.xpnet  parallel_rgraph_all.xpnet  parallel_tree_all.xpnet  pfd_compute.xpnet  pfd_fork_compute_step.xpnet  pfd_serial_compute_pfd.xpnet  pfd_serial_compute_step.xpnet  pfd_split_compute_step.xpnet  types.xpnet
