
install (FILES "ssi/xb_deg5_1_1.ssi"
               "ssi/xb_deg5_1_2.ssi"
               "ssi/xb_deg5_1_3.ssi"
               "ssi/xb_deg5_1_4.ssi"
               "ssi/xb_deg5_1_5.ssi"
               "ssi/xb_deg5_1_6.ssi"
               "ssi/xb_deg5_1_7.ssi"
               "ssi/xb_deg5_1_8.ssi"
               "ssi/xb_deg5_1_9.ssi"
               "ssi/xb_deg5_1_10.ssi"
  DESTINATION "${PFD_EXAMPLE_PATH}"
)
